feat(weather-app): Adds row and column css

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,17 @@
   left: 33%;
   top: 0;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
