--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,30 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  top: 0;
+  left: 0;
 }
 
 .input {
-  position: fixed;
-  left: 33%;
   top: 0;
+  left: 33%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#weather-loc {
+  text-align: center;
 }
 
 .row {
-  position: fixed;
-  left:0;
+  position: absolute;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
+  justify-content: center;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
+  padding: 10px;
 }
