--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,23 @@
 
 .input {
   top: 0;
-  left: 33%;
+  left: 35%;
   position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#weather-loc {
+.loc-and-links {
+  position: relative;
+  margin-top: -15%;
+  left: 50%;
+  text-align: center;
+}
+
+h3 {
+  position: relative;
+  left: 50%;
   text-align: center;
 }
 
